# emlx

./: Cargo.toml  README.md
src/: flags.rs  lib.rs  parse.rs
tests/: integration.rs
tests/emails/: broken1.emlx  broken2.emlx  broken3.emlx
